--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,67 @@
-body {
-  background: yellowgreen;
+* {
+  marign: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 900px;
+  height: 100vh;
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.chatWindow {
+  margin-top: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid cornflowerblue;
+
+
+  .messages {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    .message {
+      align-self: flex-start;
+      margin-bottom: 20px;
+
+      .name {
+        display: block;
+        margin-bottom: 15px;
+        text-align: left;
+      }
+
+      .text {
+        color: #fff;
+        background: gray;
+        border-radius: 20px;
+        padding: 10px;
+      }
+    }
+
+    .own-message {
+      align-self: flex-end;
+
+      .name {
+        text-align: right;
+      }
+
+      .text {
+        color: #fff;
+        background: cornflowerblue;
+      }
+    }
+
+  }
+
+  input {
+    width: 100%;
+    height: 50px;
+  }
+
 }
